# mpw-shell

./: .travis.yml  CMakeLists.txt  README.md  builtins.cpp  builtins.h  command.cpp  command.h  config.h.in  environment.cpp  environment.h  error.h  fdset.h  lempar.cxx  macroman.cpp  macroman.h  macroman.x  make-version.rb  mapped_file.cpp  mapped_file.h  mpw-regex.cpp  mpw-regex.h  mpw-shell-builtins.cpp  mpw-shell-command.rl  mpw-shell-commands.c  mpw-shell-execute.cpp  mpw-shell-expand.rl  mpw-shell-parser.cpp  mpw-shell-quote.rl  mpw-shell-read.rl  mpw-shell-token.rl  mpw-shell.cpp  mpw-shell.h  mpw-shell.text  mpw_parser.cpp  mpw_parser.h  pathnames.rl  phase1.cpp  phase1.h  phase1.rl  phase2-parser.lemon  (+10 more)
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake.yml
cxx/: directory_iterator.cpp  filesystem.cpp  filesystem.h  mapped_file.cpp  mapped_file.h  path.cpp
etc/: MPW Shell.terminal  Startup
